<resources>
    <string name="app_name">Droplet</string>
    <string name="search_bottom_nav">Категории</string>
    <string name="for_you_bottom_nav">Для вас</string>
    <string name="ads_bottom_nav">Объявления</string>
    <string name="chats_bottom_nav">Чаты</string>
    <string name="profile_bottom_nav">Профиль</string>
    <string name="api_url">http://10.193.62.51:8080</string>
    <string name="firstLastName">%1$s %2$s</string>
    <string name="itemsNumber">Айтемов: %1$d</string>
    <string name="alertMesPhone">Укажите номер телефона в настройках!</string>
    <string name="alertMesEmail">Укажите электронную почту в настройках!</string>
    <string name="alertMesAddress">Укажите адрес в настройках!</string>
    <string name="alertMesFirstLastName">Укажите имя в настройках!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="EmailHint">Электронная почта</string>
    <string name="PhoneHint">Номер телефона</string>
    <string name="AddressHint">Адрес</string>
    <string name="FirstNameHint">Имя</string>
    <string name="LastNameHint">Фамилия</string>
    <string name="Save">Сохранить</string>
    <string name="TitleEdit">Личная информация</string>
    <string name="changePhoto">Изменить фото</string>
    <string name="MyAdvertisements">Мои объявления</string>
    <string name="Favourites">Избранное</string>
    <string name="SharedUsage">Совместное использование</string>
    <string name="advertisementsName">Название объявления</string>
    <string name="addAdvertisement">Добавьте объявление</string>
    <string name="EmptyForNow">Пока здесь пусто...</string>
    <string name="category">Категория</string>
    <string name="myMessages">Мои сообщения</string>
    <string name="recommendations">Рекомендации</string>
    <string name="forYou">Для вас</string>
    <string name="recent">Недавно опубликованные</string>
    <string name="near">Рядом</string>
    <string name="notRegisteredYet">Еще не зарегистрированы?</string>
    <string name="logIn">ВОЙТИ</string>
    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="loginByPhobe">ВОЙТИ ПО ТЕЛЕФОНУ</string>
    <string name="loginByEmail">ВОЙТИ ПО ПОЧТЕ</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="changeLogins">Измените способы входа</string>
    <string name="change">Изменить</string>
    <string name="changePassword">Измените пароль</string>
    <string name="changePersonalData">Изменить личные данные</string>
    <string name="changeLogin">Настройки аккаунта</string>
    <string name="changePasswordSettings">Изменить пароль</string>
    <string name="logOut">Выйти</string>
    <string name="address">Адрес</string>
    <string name="phone">Номер телефона</string>
    <string name="items">Aйтемов:</string>
    <string name="name">Имя</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="adsName">Название объявления</string>
    <string name="enterMessage">Введите сообщение…</string>
    <string name="sentMes">Отправленное сообщение</string>
    <string name="receivedMes">Полученное сообщение</string>
    <string name="connect">Связаться</string>
    <string name="take">Забрать себе</string>
    <string name="similar">Похожие</string>
    <string name="reviews">Отзывы</string>
    <string name="close">Недалеко от меня</string>
    <string name="nothingFound">Кажется, ничего не нашлось! Попробуйте перефразировать запрос</string>
    <string name="advertisementName">Название объявления</string>
    <string name="publish">Опубликовать</string>
    <string name="purchases">Мои обмены</string>
    <string name="more">Больше объявлений</string>
    <string name="editYoutAds">Редактируйте объявление</string>
    <string name="changePhotos">Изменить фото</string>
    <string name="saveChanges">Сохранить изменения</string>
    <string name="queries">Запросы на обмен</string>
    <string name="accept">Принять</string>
    <string name="decline">Отклонить</string>
    <string name="contact">Связаться</string>
    <string name="recent1">Недавние</string>
    <string name="Query">Запросы на обмен</string>
    <string name="noQueries">Пока нет запросов!</string>
    <string-array name="categoryArray">
        <item>Не выбрано</item>
        <item>Совместное использование</item>
        <item>Одежда</item>
        <item>Электроника</item>
        <item>Здоровье</item>
        <item>Для дома</item>
        <item>Для животных</item>
        <item>Аксессуары</item>
        <item>Услуги</item>
        <item>Другое</item>
    </string-array>
    <string name="save">Сохранить</string>
    <string name="chooseAdress">Выберите адрес...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>