<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile.screens.fragments.EditFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editDataTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/TitleEdit"
            android:textAllCaps="true"
            android:textColor="@color/main_color"
            android:textSize="27sp" />

        <ImageView
            android:id="@+id/imageViewEditPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/editDataTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp" />

        <Button
            android:id="@+id/buttonChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewEditPhoto"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:text="@string/changePhoto" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/buttonChangePhoto"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:hint="@string/AddressHint"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextAddress"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:hint="@string/FirstNameHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextFirstName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:hint="@string/LastNameHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextLastName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:text="@string/Save" />
    </RelativeLayout>


</FrameLayout>