<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayoutChangeLogins"
    tools:context=".mainscreens.profile.screens.fragments.ChangeLoginsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editLoginsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/changeLogins"
            android:textAllCaps="true"
            android:textColor="@color/main_color"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/editLoginsTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/buttonChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:layout_alignStart="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextEmail"
            android:layout_marginTop="20dp"
            android:text="@string/change" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/buttonChangeEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:hint="@string/PhoneHint"
            android:inputType="phone" />

        <Button
            android:id="@+id/buttonChangePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPhone"
            android:layout_alignStart="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextEmail"
            android:layout_marginTop="20dp"
            android:text="@string/change" />

        <TextView
            android:id="@+id/changePasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonChangePhone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/changePassword"
            android:textAllCaps="true"
            android:textColor="@color/main_color"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextEditPassword"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_below="@id/changePasswordTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_below="@id/editTextEditPassword"
            android:layout_alignStart="@+id/editTextEditPassword"
            android:layout_alignEnd="@+id/editTextEditPassword"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRepeatPassword"
            android:layout_alignStart="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextEmail"
            android:layout_marginTop="20dp"
            android:text="@string/change" />

    </RelativeLayout>

</FrameLayout>