<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.screens.LoginActivity">

    <TextView
        android:id="@+id/loginDataTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextLogin"
        android:layout_alignStart="@+id/editTextLogin"
        android:layout_alignEnd="@+id/editTextLogin"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="Войдите в аккаунт"
        android:textAllCaps="true"
        android:textColor="@color/main_color"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/errorMessageLogin"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/errorMessageLogin"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="@color/red"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/editTextPassword"
        android:layout_alignStart="@id/editTextLogin"
        android:layout_alignEnd="@id/editTextLogin"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="20dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_above="@+id/errorMessagePassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/errorMessagePassword"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="@color/red"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/buttonLogin"
        android:layout_alignStart="@id/editTextLogin"
        android:layout_alignEnd="@id/editTextLogin"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="10dp"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonRegister"
        android:layout_alignStart="@+id/editTextLogin"
        android:layout_alignEnd="@+id/editTextLogin"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/logIn"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonLogin"
        android:layout_alignEnd="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="200dp"
        android:background="@android:color/transparent"
        android:text="@string/notRegisteredYet"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="14sp" />


</RelativeLayout>