<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainscreens.advertisements.screens.AdvertisementsActivity">

    <FrameLayout
        android:id="@+id/frameLayoutAds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp">

        <RelativeLayout
            android:id="@+id/layoutAdsRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/scrollViewAds"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/linLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <Button
                        android:id="@+id/buttonMyAdvertisements"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rounded_button_unactive"
                        android:text="@string/MyAdvertisements"
                        android:textColor="@color/main_color"
                        android:textSize="11sp" />

                    <Button
                        android:id="@+id/buttonFavourites"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Favourites"
                        android:background="@drawable/rounded_button_unactive"
                        android:textColor="@color/main_color"
                        android:textSize="11sp" />

                    <Button
                        android:id="@+id/buttonSharedUsage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/rounded_button_unactive"
                        android:textColor="@color/main_color"
                        android:text="@string/SharedUsage"
                        android:textSize="11sp" />

                    <Button
                        android:id="@+id/buttonPurchases"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/purchases"
                        android:background="@drawable/rounded_button_unactive"
                        android:textColor="@color/main_color"
                        android:textSize="11sp" />

                </LinearLayout>

            </HorizontalScrollView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scrollViewAds"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:foregroundGravity="center"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/buttonEmptyAction"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_below="@+id/scrollViewAds"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="130dp"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="130dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/addAdvertisement"
                android:textSize="11sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonAddAds"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:padding="0dp"
                android:text="+"
                android:textSize="28sp" />

        </RelativeLayout>

    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/main_color"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>