<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainscreens.fragments.EditAdvertisementFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editDataTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/editYoutAds"
            android:textAllCaps="true"
            android:textColor="@color/main_color"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageViewEditPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/editDataTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/add_photo" />

        <Button
            android:id="@+id/buttonChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/imageViewEditPhoto"
            android:layout_alignParentStart="true"
            android:background="@drawable/rounded_button"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:text="@string/changePhotos" />

        <EditText
            android:id="@+id/editTextAdsName"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/buttonChangePhoto"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:hint="@string/advertisementName"
            android:windowSoftInputMode="adjustPan" />

        <TextView
            android:id="@+id/errorAdsName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textColor="@color/red"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/editTextAdsName"
            android:layout_alignStart="@id/editTextAdsName"
            android:layout_alignEnd="@id/editTextAdsName"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/editTextAdsDescription"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/editTextAdsName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:gravity="top"
            android:hint="Описание объявления..."
            android:windowSoftInputMode="adjustPan" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextAdsDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:background="@drawable/edit_text"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp" />

        <Button
            android:id="@+id/buttonPublish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            android:layout_below="@+id/spinnerCategory"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/saveChanges" />

    </RelativeLayout>

</FrameLayout>